final fixed title

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="This is the portfolio Website of mine. Made with ReactJS and love. Template by Kaustubh Mishra(@kaustubhai)">
-    <meta name="author" content="Kaustubh Mishra, Jaypee University of Information Technology, Solan">
-    <meta name="keywords" content="HTML, CSS, Javascript, ReactJS, NodeJS, SEO, Coding, Portfolio, Resume, Website, Profile, Github, Linkedin, Design, Interactive, CV, Skills">
+    <meta name="description" content="This is the portfolio Website of mine. Made with ReactJS and love.">
+    <meta name="author" content="Yahya Demirbas, Istanbul">
+    <meta name="keywords" content="HTML, CSS, Javascript, ReactJS, NodeJS, SEO, Coding, Portfolio, Resume, Website, Profile, Github, Linkedin, Design, Interactive, CV, Skills, Yahya, Demirbas, yahyademirbas, game, development">
     <meta name="robots" content= "index, follow">
-    <meta name="og:title" content="Portfolio Template">
-    <meta name="og:type" content="Resume Website">
+    <meta name="og:title" content="Yahya Demirbas">
+    <meta name="og:type" content="Personal Website">
     <meta name="og:locale" content="en_IN">
     <meta property="og:image" content="%PUBLIC_URL%/favicon-32x32.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
